@@ -288,6 +288,8 @@ implemented:
 ~~~perl
     package long      { }
     package int       { }
+    package short     { }
+    package byte      { }
 ~~~
 
 other primitive types are missing.
